--- a/source/_layouts/category.html
+++ b/source/_layouts/category.html
@@ -6,13 +6,16 @@
 			<div id="content" class="index">
 				{% include asides/sidebar.html %}
 				<div id="main">
-				{{ content }}
+					<h1>CATEGORY > {{ page.title }}</h1>
+					{{ content }}
+				</div>
+				<div id="footer">
+					{% include footer.html %}
 				</div>
 			</div>
-			<div id="footer">
-				{% include footer.html %}
-			</div>
-		</div>					
+		</div>
 	</body>
 </html>
+
+
 
